[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PowSpawner.gd" type="Script" id=1]

[node name="PowSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="Node" parent="."]

[node name="lightTimer" type="Timer" parent="."]

[node name="shTimer" type="Timer" parent="."]

[node name="healthTimer" type="Timer" parent="."]

[node name="speedTimer" type="Timer" parent="."]
[connection signal="timeout" from="lightTimer" to="." method="_on_lightTimer_timeout"]
[connection signal="timeout" from="shTimer" to="." method="_on_shTimer_timeout"]
[connection signal="timeout" from="healthTimer" to="." method="_on_healthTimer_timeout"]
[connection signal="timeout" from="speedTimer" to="." method="_on_speedTimer_timeout"]
